--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,15 @@ body {
     justify-content: space-between;
 }
 
+.header-logo svg {
+    fill: #E8E8E8;
+}
+.header-logo svg:hover {
+    fill: #F16D7F;
+}
+.header-logo svg:active {
+    fill: #E8E8E8;;
+}
 .header-logo-img {
     background-image: url("../img/logo.png");
     box-sizing: border-box;
@@ -45,6 +54,36 @@ body {
     width: 44px;
     height: 38px;
 }
+
+.header-logo-search {
+    display: block;
+    width: 26px;
+    height: 26px;
+    position: relative;
+}
+
+.header-logo-search__input {
+    margin-left: 5px;
+    width: 0px;
+    min-height: 0px;
+    padding: 0;
+    box-sizing: border-box;
+    background-color:transparent;
+    color: #fff;
+    position: absolute;
+    top: -1px;
+    left: 30px;
+    border: none;
+}
+
+.header-logo-search__input:focus {
+    width: 180px;
+    transition: width 1s ease;
+    /* border: 1px solid #fff; */
+    padding: 5px;
+
+}
+
 
 .header-button {
     max-width: 159px;
@@ -56,11 +95,178 @@ body {
     align-content: space-between;
 }
 
+.header-button-nav-btn {
+    display: block;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-button-nav-btn span {
+    width: 100%;
+    height: 3px;
+    background-color: #E8E8E8;
+    position: relative;
+
+}
+.header-button-nav-btn:hover span,
+.header-button-nav-btn:hover span::before,
+.header-button-nav-btn:hover span::after
+ {
+    background-color: #F16D7F;
+}
+.header-button-nav-btn:active span,
+.header-button-nav-btn:active span::before,
+.header-button-nav-btn:active span::after {
+    background-color: #E8E8E8;
+}
+
+.header-button-nav-btn span::before,
+.header-button-nav-btn span::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: #E8E8E8;
+    position: absolute;
+    top: -10px;
+    left: 0;
+} 
+ .header-button-nav-btn span::after {
+    top: 10px;
+} 
+#menu-switch {
+    display: none;
+}
+
+#menu-switch:checked ~ .menu-list {
+    display: block;
+}
+
+.menu-list {
+    display: none;
+    max-width: 232px;
+    width: 100%;
+    min-height: 634px;
+    box-sizing: border-box;
+    background-color: #fff;
+    padding: 32px 74px 32px 32px;
+    position: absolute;
+    top: 75px;
+    right: 0;
+    box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+    
+}
+.menu-list-item {
+    list-style-type: none;
+  }
+
+.menu-list-item > a {
+    display: block;
+    font-size: 14px;
+    line-height: 17px;
+    color: #F16D7F;
+    list-style: none;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin: 0 0 12px 0
+}
+
+.menu-list-item:hover > a {
+    color: #b784a7;
+    transition: 0.2s;
+    transform: scale(1.1);
+}
+.menu-list-item:active > a {
+    text-decoration: none;
+}
+
+
+.menu-list-close-btn {
+
+}
+
+.menu-list-item-title {
+    display: block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    text-transform: uppercase;
+    margin: 0 0 24px 0;
+    
+}
+
+.menu-sublist {
+    display: block;
+    box-sizing: border-box;
+    padding-left: 21.5px;
+}
+
+.menu-sublist-item {
+    list-style-type: none;
+}
+.menu-sublist-item > a {
+    display: block;
+    font-size: 14px;
+    line-height: 17px;
+    color: #6F6E6E;
+    list-style: none;
+    text-transform: none;
+    margin: 0 0 11px 0;
+
+}
+
+.menu-sublist-item a {
+    text-decoration: none;
+}
+.menu-sublist-item:hover a {
+    text-decoration: underline;
+    transition: 0.2s;
+    transform: scale(1.1);
+}
+.menu-sublist-item:active a {
+    text-decoration: none;
+}
+
+
 .header-button-basket {
     max-width: 32px;
     width: 100%;
 }
 
+.header-button-basket-ancor {
+    text-decoration: none;
+    position: relative;
+}
+.header-button-basket-ancor span {
+    width: 19px;
+    height: 17px;
+    border-radius: 50%;
+    font-size: 14px;
+    line-height: 17px;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background-color: #F16D7F;
+    color: #fff;
+    position: absolute;
+    right: -10px;
+    top: -19px;
+}
+
+.header-button-basket-ancor svg {
+    fill: #E8E8E8;
+}
+header-button-basket-ancor:hover svg {
+    fill: orange;
+}
+header-button-basket-ancor:active svg {
+    fill: red;
+}
 /* ======= END header ======= */
 
 /* ======= top ======= */
@@ -129,8 +335,9 @@ margin: 0 auto 96px auto;
     grid-column: span 3;
 }
 
-.offer-list-item {
-
+.offer-list-item:hover {
+    transition: 0.5s;
+    transform: scale(1.1);
 }
 
 .offer-list-item-img {
@@ -583,8 +790,31 @@ margin: 0 auto 96px auto;
     gap: 7.2px;
     align-content: center;
 }
+.footer-list-item a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    background-color: #fff;
+}
+.footer-list-item svg {
+    fill: #000;
+}
 
+.footer-list-item a:hover {
+    background-color: #E05C6E;;
+}
 
+.footer-list-item a:hover svg {
+    fill: #fff;
+}
+.footer-list-item a:active {
+    background-color: #fff;
+}
+.footer-list-item a:active svg {
+    fill: #000;
+}
 /* ======= END footer ======= */
 
 
